# agio-protocol

./: .gitignore  IP_NOTICE.md  README.md  SOCIAL_BIOS.md  demo.py  deploy_bots.sh  skills-lock.json
sdk/: pyproject.toml
sdk/src/agio/: __init__.py  client.py  models.py
sdk/src/agiotage/: __init__.py  api_client.py  async_client.py  errors.py
service/: .gitignore  Dockerfile  Dockerfile.oracle  Dockerfile.reconciler  Dockerfile.solana-worker  Dockerfile.worker  Procfile  docker-compose.prod.yml  docker-compose.yml  local_dashboard.py  pyproject.toml  railway.toml  run_local.py  run_local_convergence.py  run_local_copy.py  run_local_migration.py  run_local_momentum.py  run_local_sniper.py  run_local_whale.py
service/.netlify/: netlify.toml
service/reports/: capacity_report.md
service/src/: main.py
service/src/agents/: growth_agent.py
service/src/api/: admin_routes.py  alpha_routes.py  arena_routes.py  auth_guard.py  auth_routes.py  challenges_routes.py  chat_routes.py  chrome_routes.py  copy_trader_routes.py  correlation_routes.py  crypto_trader_routes.py  dashboard_routes.py  jobs_routes.py  market_routes.py  meme_routes.py  middleware.py  momentum_routes.py  notification_routes.py  paper_trader_routes.py  routes.py  sentiment_routes.py  smart_money_routes.py  social_routes.py  stock_trader_routes.py  trading_routes.py  unusual_whales_routes.py  wallet_follow_routes.py  whale_routes.py
service/src/core/: cache.py  config.py  database.py  exceptions.py  ratelimit.py  redis.py
service/src/models/: agent.py  base.py  chat.py  (+7 more)
service/tests/: test_cross_chain.py
(+243 files in other folders)
