[project]
name = "agiotage-sdk"
version = "0.2.0"
description = "Agiotage SDK — Cross-chain payments, jobs, and competitions for AI agents"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25"]
license = {text = "MIT"}
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
